test: add pytest
Signed-off-by: Jason Scheffel <contact@jasonscheffel.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = []
+
+[tool.uv.workspace]
+members = ["temp"]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.4",
+]
