feat(pyproject.toml): update fields
Signed-off-by: Jason Scheffel <contact@jasonscheffel.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,11 @@
 name = "openbot"
 version = "0.1.0"
 description = "Add your description here"
+authors = [
+  {name = "Jason Scheffel", email = "contact@jasonscheffel.com"},
+]
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = ">=3.12"
 dependencies = []
 
