--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ authors = [
 readme = "README.md"
 license = {file = "LICENSE"}
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "typer>=0.15.1",
+]
 
 [tool.uv.workspace]
 members = ["temp"]
