--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,7 @@ members = ["temp"]
 dev = [
     "pytest>=8.3.4",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
