--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 license = {file = "LICENSE"}
 requires-python = ">=3.12"
 dependencies = [
+    "discord-py[voice]>=2.4.0",
     "pyyaml>=6.0.2",
     "typer>=0.15.1",
 ]
