--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ license = {file = "LICENSE"}
 requires-python = ">=3.12"
 dependencies = [
     "discord-py[voice]>=2.4.0",
+    "litellm>=1.57.4",
     "pyyaml>=6.0.2",
     "typer>=0.15.1",
 ]
