--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ dev = [
     "pytest>=8.3.4",
 ]
 
+[project.scripts]
+pyopenbot = "pyopenbot.main:main"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
