--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,6 @@ pyopenbot = "pyopenbot.main:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/pyopenbot"]
