--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "discord-py[voice]>=2.4.0",
     "litellm>=1.57.4",
     "pyyaml>=6.0.2",
+    "rich>=13.9.4",
     "typer>=0.15.1",
 ]
 
