--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "any-llm-sdk>=0.13.1",
     "discord-py[voice]>=2.4.0",
     "pyyaml>=6.0.2",
+    "requests>=2.32.4",
     "rich>=13.9.4",
     "typer>=0.15.1",
 ]
